Fix broken layout for table small size

--- a/src/static/css/custom.scss
+++ b/src/static/css/custom.scss
@@ -367,6 +367,7 @@ section#aid {
     table {
         @extend .table;
         @extend .table-bordered;
+        table-layout: fixed;
 
         caption {
             @extend .sr-only;
